# mayascan

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  conftest.py  evaluate.py  pyproject.toml  requirements.txt  train.py  train_v2.py  upload_models.py
.github/workflows/: ci.yml
docs/: training-data-sources.md
docs/plans/: 2026-02-21-mayascan-design.md  2026-02-21-mayascan-implementation.md
mayascan/: __init__.py  __main__.py  _optional.py  augment.py  benchmark.py  classify.py  cli.py  comparison.py  config.py  crossval.py  crs.py  data.py  detect.py  ensemble.py  export.py  features.py  heatmap.py  losses.py  metrics.py  morphology.py  multiscale.py  report.py  spatial.py  tile.py  train.py  visualize.py
mayascan/models/: __init__.py  dinov2.py  unet.py
notebooks/: train.ipynb
scripts/: type_coverage.py
tests/: test_api.py  test_augment.py  test_benchmark.py  test_classify.py  test_comparison.py  test_config.py  test_crossval.py  test_crossval_training.py  test_crs.py  test_data.py  test_detect.py  test_dinov2.py  test_ensemble.py  test_export.py  test_features.py  test_heatmap.py  test_integration.py  test_losses.py  test_metrics.py  test_model.py  test_morphology.py  test_multiscale.py  test_report.py  test_spatial.py  test_tile.py  test_train.py  test_visualize.py
web/: package-lock.json  package.json  wrangler.jsonc
web/public/: app.js  constants.js  export.js  index.html  inference.js  postprocess.js  style.css  terrain.js  tiler.js
web/public/sample/: sample-dem.json
web/scripts/: copy-runtime-libs.mjs  export-models.py
