[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayascan"
version = "0.1.0"
description = "Open-source archaeological LiDAR feature detection for Maya archaeology"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Chris Holmes"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "segmentation-models-pytorch>=0.3.3",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
geo = ["rasterio>=1.3", "geopandas>=0.13", "shapely>=2.0"]
rvt = ["rvt-py>=2.2"]
web = ["gradio>=4.0"]
hub = ["huggingface-hub>=0.20"]
pdal = ["python-pdal>=3.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["mayascan[geo,rvt,web,hub,pdal,dev]"]

[tool.setuptools.packages.find]
include = ["mayascan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
