[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayascan"
version = "0.6.0"
description = "Open-source archaeological LiDAR feature detection for Maya archaeology"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Chris Holmes"},
]
keywords = ["archaeology", "lidar", "segmentation", "maya", "deep-learning", "remote-sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "torchvision>=0.15",
    "segmentation-models-pytorch>=0.3.3",
    "Pillow>=10.0",
    "tqdm>=4.65",
]

[project.urls]
Homepage = "https://github.com/fascinatedbyeverything/mayascan"
Documentation = "https://github.com/fascinatedbyeverything/mayascan#readme"
Repository = "https://github.com/fascinatedbyeverything/mayascan"
Issues = "https://github.com/fascinatedbyeverything/mayascan/issues"

[project.scripts]
mayascan = "mayascan.cli:main"

[project.optional-dependencies]
geo = ["rasterio>=1.3", "geopandas>=0.13", "shapely>=2.0", "pyproj>=3.5"]
rvt = ["rvt-py>=2.2"]
web = ["gradio>=4.0"]
hub = ["huggingface-hub>=0.20"]
pdal = ["python-pdal>=3.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
foundation = ["transformers>=4.36", "peft>=0.7"]
all = ["mayascan[geo,rvt,web,hub,pdal,dev,foundation]"]

[tool.setuptools.packages.find]
include = ["mayascan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"
